--- a/chap-results.tex
+++ b/chap-results.tex
@@ -60,25 +60,22 @@ The GI, SSAO and combine pass operate in screen space and are mostly dependent o
 
 \begin{figure}[htb]
     \centering
-    \begin{subfigure}[b]{1.0\linewidth}
+    \begin{subfigure}[b]{1.0\textwidth}
         \centering
         \includegraphics[width=1.0\linewidth]{screenshots/RSM_diffuse}%
         \caption{}
-        \label{fig:results:interleaved_before}%
     \end{subfigure}\\
     \par\medskip
     \begin{subfigure}[b]{0.49\textwidth}
         \centering
         \includegraphics[width=1.0\linewidth]{screenshots/RSM_normal}%
         \caption{}
-        \label{fig:results:interleaved_before}%
     \end{subfigure}%
     \hfill
     \begin{subfigure}[b]{0.49\textwidth}
         \centering
         \includegraphics[width=1.0\linewidth]{screenshots/RSM_depth}%
         \caption{}
-        \label{fig:results:interleaved_before}%
     \end{subfigure}%
     \caption{A reflective shadow map, with its (a) diffuse, (b) normal and (c) depth buffer.}
     \label{fig:results:RSMBuffers}%
