--- a/chap-introductionGI.tex
+++ b/chap-introductionGI.tex
@@ -28,7 +28,7 @@ Direct light usually has a single point as origin in the case of point lights, o
 
 \textbf{Indirect light} on the other hand has bounced off of at least two surfaces before reaching the camera. Since each point that is directly lit now reflects light into arbitrary directions, this process is much less structured and thus harder to compute. To manage this complexity, indirect light has been separated into small-scale and large-scale indirect light. An intermediate step for medium-scale indirect lighting has also been proposed \citep{reed:2012:mediumAO}.
 
-The computation of \textbf{small-scale indirect light} has been made popular with \textit{screen-space ambient occlusion} (SSAO, \cite{Mittring:2007:Cryengine2}). While this should be more accurately described as small-scale indirect \textit{occlusion}, since it only darkens occluded areas, \textit{screen-space directional occlusion} (SSDO, \cite{Ritschel:2009:SSDO}) actually performs a form of indirect lighting, albeit a limited one. \citet{jimenez:2016:AO} have finally put this technique onto a physically based foundation.
+The computation of \textbf{small-scale indirect light} has been made popular with \textit{screen-space ambient occlusion} (SSAO, \cite{Mittring:2007:Cryengine2}). While this should be more accurately described as small-scale indirect \textit{occlusion}, since it only darkens occluded areas, \textit{screen-space directional occlusion} (SSDO, \cite{Ritschel:2009:SSDO}) actually performs a form of indirect lighting, albeit a limited one. \citet{jimenez:2016:AO} has finally put this technique onto a physically based foundation.
 
 Small-scale indirect lighting techniques such as SSAO are important for accentuating small geometric details in objects and providing a sort of contact shadow as a visual cue for the proximity of objects to each other.
 
@@ -48,9 +48,7 @@ For a comprehensive introduction to global illumination, see \citet{Ritschel:201
 \subsection{Motivation}
 The single overarching advantage of simulating global illumination in graphics applications is the added realism which leads to a host of benefits. An obvious one is the greater immersion achieved in movies and video games, but also architectural and e-commerce visualization applications can provide better assistance to its users through more realistic renderings. For instance, in architectural visualization, the colors of the furniture, carpets, decoration etc.\ are influencing the overall tone of the scene, e.\,g., by coloring the walls slightly, leading to a better basis for real-world design decisions.
 
-Real-time techniques that allow camera movements in a given scene and lighting setup on the one hand enable approximating GI in applications that are inherently real-time, e.\,g., video games.
-
-On the other hand, even applications that do not require real-time frame rates can benefit from such techniques. For instance, while the features that are covered in this thesis are basically solved for offline rendering, the film industry can benefit from real-time GI techniques during production by means of faster testing of, e.\,g., different camera angles. Archvis applications can serve more use cases by implementing interactive walkthroughs.
+Real-time techniques that allow camera movements in a given scene and lighting setup on the one hand enable approximating GI in applications that are inherently real-time, e.\,g., video games. On the other hand, even applications that do not require real-time frame rates can benefit from such techniques. For instance, while the features that are covered in this thesis are basically solved for offline rendering, the film industry can benefit from real-time GI techniques during production by means of faster testing of, e.\,g., different camera angles. Archvis applications can serve more use cases by implementing interactive walkthroughs.
 
 Allowing changing geometry provides additional benefits: Games can create new experiences with changing level geometry, e.\,g., through destruction, level designers and lighting artists can expect a more natural workflow without having to resort to workarounds like fake lights, artists in filmmaking benefit from shorter iteration cycles, and visualization tools provide immediate feedback to changes in, e.\,g., interior decoration in the case of archvis.
 
