--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1113,3 +1113,11 @@ howpublished = {Presentation at SIGGRAPH 2016},
 year = {2016},
 url = {http://advances.realtimerendering.com/s2016/index.html}
 }
+
+@misc{Lauritzen:2010:Deferred,
+  title={Deferred rendering for current and future rendering pipelines},
+  author={Lauritzen, Andrew},
+  howpublished = {Presentation at SIGGRAPH 2010},
+  year={2010},
+  url = {http://bps10.idav.ucdavis.edu/}
+}
